[package]
name = "init"
version = "0.1.0"
description = "init for MCBS MicroVMs"
repository = "https://github.com/endreszabo/monitoring.be.sexy"
homepage = "https://github.com/endreszabo/monitoring.be.sexy"
readme = "README.md"
license = "GPL-V2"
edition = "2018"
exclude = ["test_fixture"]

[dependencies]
libc = "0.2.79"
nix = "0.22.1"
rand = "0.8.3"
sha2 = ">=0.8.0"
vsock = { path = "../" }
command-fds = "0.2.1"
log = "0.4"
tracing-subscriber = "0.2"
tracing = "0.1"
os_pipe = "0.8.2"

[dev-dependencies]
